--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -27,6 +27,14 @@
     <%= f.label :password %><br />
     <%= f.password_field :password %>
   </div>
+    <div class="field">
+        <%= f.label :latitude %><br />
+        <%= f.text_field :latitude %>
+      </div>
+    <div class="field">
+        <%= f.label :longitude %><br />
+        <%= f.text_field :longitude %>
+      </div>
   <div class="actions">
     <%= f.submit %>
   </div>
