--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,17 +9,31 @@
     <th></th>
   </tr>
 
-<% @users.each do |user| %>
-  <tr>
-    <td><%= user.name %></td>
-    <td><%= user.email %></td>
-    <td><%= link_to 'Ver', user %></td>
-    <td><%= link_to 'Editar', edit_user_path(user) %></td>
-    <td><%= link_to 'Eliminar', user, confirm: 'Estás seguro de eliminar a ' + user.name + '?', method: :delete %></td>
-  </tr>
-<% end %>
+  <% @users.each do |user| %>
+      <tr>
+        <td><%= user.name %></td>
+        <td><%= user.email %></td>
+        <td><%= link_to 'Ver', user %></td>
+        <td><%= link_to 'Editar', edit_user_path(user) %></td>
+        <td><%= link_to 'Eliminar', user, confirm: 'Estás seguro de eliminar a ' + user.name + '?', method: :delete %></td>
+      </tr>
+  <% end %>
 </table>
 
-<br />
+<br/>
 
 <%= link_to 'Nuevo Usuario', new_user_path %>
+
+<h3>GoogleMaps</h3>
+
+<%=
+    gmaps({"direction" => {
+            "data" => {"from" => "volcan tronador 5800 santiago, chile", "to" => "Vicuña Mackenna 3939 santiago, chile"},
+            "options" => {"display_panel" => true, "panel_id" => "instructions"}
+    }
+          })
+%>
+
+<%= "." + @json[0].to_s + "." %>
+
+
