--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,28 +2,33 @@
 <html>
 <head>
   <title>BiciNETa</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= stylesheet_link_tag 'gmaps4rails' %>
+  <%= stylesheet_link_tag "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-    <h1><%= link_to "BiciNETa!", root_path %></h1>
-    <% if signed_in? %>
-          Logueado como <%= link_to current_user.name, current_user %>
-          <%= link_to "(Salir)", signout_path, method: "delete" %>
-    <% end %>
+<h1><%= link_to "BiciNETa!", root_path %></h1>
+<% if signed_in? %>
+    Logueado como <%= link_to current_user.name, current_user %>
+    <%= link_to "(Salir)", signout_path, method: "delete" %>
+<% end %>
+
+<ul style="display: inline;">
+  <li><%= link_to "Users", users_path %></li>
+  <li><%= link_to "Points", points_path %></li>
+  <li></li>
+</ul>
 
 <% if signed_in? %>
     <%= yield %>
 <% else %>
-  <%= render template: "sessions/new" %>
+    <%= render template: "sessions/new" %>
 <% end %>
 
-
 </body>
+
 <footer>
-  <p><%= yield :scripts %></p>
   <p>&copy; BiciNETa 2012</p>
 </footer>
+
 </html>
