Fixing new points author

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     body {
         width: 800px;
         margin: 0 auto;
+        border: 1px solid #CCCCCC
     }
     form {
         border: 1px solid #CCCCCC;
@@ -34,7 +35,7 @@
   </style>
 
 </head>
-<body class="bordered" style="padding: 10px">
+<body style="padding: 10px">
 <div class="bordered" style="text-align: center; margin-bottom: 10px;">
   <h1><%= link_to "BiciNETa!", root_path %></h1>
 </div>
