--- a/app/views/points/show.html.erb
+++ b/app/views/points/show.html.erb
@@ -1,35 +1,43 @@
 <p id="notice"><%= notice %></p>
 
-<div class="bordered" style="padding: 10px;">
-  <p>
-    <b>Place:</b>
-    <%= @point.place %>
-  </p>
+<div class="row-fluid">
+  <div class="span3">
+    <p>
+      <b>Place:</b>
+      <%= @point.place %>
+    </p>
 
-  <p>
-    <b>Address:</b>
-    <%= @point.address %>
-  </p>
+    <p>
+      <b>Address:</b>
+      <%= @point.address %>
+    </p>
 
-  <p>
-    <b>Latitude:</b>
-    <%= @point.latitude %>
-  </p>
+    <p>
+      <b>Latitude:</b>
+      <%= @point.latitude %>
+    </p>
 
-  <p>
-    <b>Longitude:</b>
-    <%= @point.longitude %>
-  </p>
-  <p>
+    <p>
+      <b>Longitude:</b>
+      <%= @point.longitude %>
+    </p>
+
+  </div>
+  <div class="span3">
+    <p>
       <%= image_tag "http://maps.google.com/maps/api/staticmap?size=300x200&sensor=false&zoom=13&markers=#{@point.latitude}%2C#{@point.longitude}" %>
-  </p>
-  <p>
+    </p>
+
+    <p>
       <b>Creador:</b>
       <%= link_to @user.name, @user %>
-  </p>
+    </p>
+
+  </div>
+
 
 </div>
 
 
-<%= link_to 'Edit', edit_point_path(@point) %> |
-<%= link_to 'Back', points_path %>
+<%= link_to 'Edit', edit_point_path(@point), class: "btn" %>
+<%= link_to 'Back', points_path, class: "btn" %>
