--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,34 +1,32 @@
 <h1>Listado de usuarios</h1>
 
-<div id="search_users" style="margin-bottom: 10px;">
-  <%= form_tag users_path, method: :get do %>
-      <%= label_tag :Búsqueda %>
+
+<div id="search_users" style="margin-top: 20px;">
+  <%= form_tag users_path, {class: "form-search" , method: :get} do %>
       <%= text_field_tag :search, params[:search] %>
-      <%= submit_tag :Buscar %>
+      <%= submit_tag :Buscar, class: "btn" %>
   <% end %>
 </div>
 
-<table>
+<table class="table table-striped table-bordered">
   <tr>
     <th>Nombre</th>
     <th>Email</th>
-    <th></th>
-    <th></th>
     <th></th>
   </tr>
 
   <% @users.each do |user| %>
       <tr>
-        <td><%= link_to user.name, user %></td>
+        <td>
+          <%= link_to user.name, user %>
+        </td>
         <td><%= user.email %></td>
-        <td><%= link_to 'Editar', edit_user_path(user) %></td>
-        <td><%= link_to 'Eliminar', user, confirm: 'Estás seguro de eliminar a ' + user.name + '?', method: :delete %></td>
+        <td>
+          <a href="<%= edit_user_path(user) %>"><i class="icon-edit"></i></a>
+          <a href="<%= user %>" data-confirm="Estás seguro de eliminar a <%= user.name %>?" data-method="delete" rel="nofollow"><i class="icon-remove"></i></a>
+        </td>
       </tr>
   <% end %>
 </table>
 
-<br/>
-
-<%= link_to 'Nuevo Usuario', new_user_path %>
-
-
+<%= link_to 'Nuevo Usuario', new_user_path, class: "btn" %>
