--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,32 +1,33 @@
 <p id="notice"><%= notice %></p>
 
-<div class="bordered" style="padding: 10px;">
-  <p>
-    <b>Name:</b>
-    <%= @user.name %>
-  </p>
+<ul class="thumbnails">
+  <li class="span1">
+    <img src="http://placehold.it/70x70" alt="" class="thumbnail">
+  </li>
+  <li class="span10">
+    </br>
+    <h4><%= @user.name %></h4>
 
-  <p>
-    <b>Email:</b>
     <%= @user.email %>
-  </p>
+
+  </li>
+</ul>
+
+<table class="table table-striped table-bordered">
+  <tr>
+    <th>Nombre</th>
+    <th>Dirección</th>
+  </tr>
+  <% @points.each do |p| %>
+      <tr>
+        <td><%= link_to p.place, p %></td>
+        <td><%= p.address %></td>
+      </tr>
+  <% end %>
+</table>
 
 
-  <table style="width: 700px; margin: 0 auto;">
-    <tr>
-      <th>Nombre</th>
-      <th>Dirección</th>
-    </tr>
-    <% @points.each do |p| %>
-        <tr>
-          <td><%= link_to p.place, p %></td>
-          <td><%= p.address %></td>
-        </tr>
-    <% end %>
-  </table>
 
+<%= link_to 'Edit', edit_user_path(@user), class: "btn" %>
+<%= link_to 'Back', users_path, class: "btn" %>
 
-
-  <%= link_to 'Edit', edit_user_path(@user) %> |
-  <%= link_to 'Back', users_path %>
-</div>
