--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -33,7 +33,7 @@ div {
 .field_with_errors {
   padding: 2px;
   background-color: red;
-  display: table; }
+   }
 
 #error_explanation {
   width: 450px;
@@ -46,6 +46,22 @@ div {
     text-align: left;
     font-weight: bold;
     padding: 5px 5px 5px 15px;
+    font-size: 12px;
+    margin: -7px;
+    margin-bottom: 0px;
+    background-color: #c00;
+    color: #fff; }
+  ul li {
+    font-size: 12px;
+    list-style: square; } }
+
+#error_explanation_sign_up {
+  width: 100%;
+  border: 2px solid red;
+  background-color: #f0f0f0;
+  h2 {
+    text-align: left;
+    font-weight: bold;    
     font-size: 12px;
     margin: -7px;
     margin-bottom: 0px;
