--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,30 +23,30 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-      </a>
-      <a class="brand" href="#">BiciNETa</a>
+      </a>      
+      <a class="brand" href="<%= root_path %>" >BiciNETa</a>      
 
-      <div class="nav-collapse">
-        <ul class="nav">
-          <li class="divider-vertical" style="margin: 0 25px;"></li>
-          <li><%= link_to "Home", welcome_path %></li>
-          <li><%= link_to "Users", users_path %></li>
-          <li><%= link_to "Points", points_path %></li>
-
-        </ul>
-
-        <% if signed_in? %>
-
-            <div class="btn-group pull-right">
-
-              <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-                <i class="icon-user"></i> <%= (current_user.name).titleize %>
+      <div class="nav-collapse">       
+        <% if signed_in? %>            
+          <ul class="nav">
+            <li class="divider-vertical" style="margin: 0 25px;"></li>
+            <li><%= link_to "Home", welcome_path %></li>
+            <li><%= link_to "Users", users_path %></li>
+            <li><%= link_to "Points", points_path %></li>
+          </ul> 
+            <div class="btn-group pull-right">             
+              <button class="btn">
+                <i class="icon-user"></i>
+                <%= (current_user.name).titleize %>
+              </button>
+              <button class="btn dropdown-toggle" data-toggle="dropdown">
                 <span class="caret"></span>
-              </a>
+              </button>
               <ul class="dropdown-menu">
                 <li><%= link_to "Perfil", current_user %></li>
                 <li class="divider"></li>
-                <li><%= link_to "Salir", signout_path, method: "delete" %></li>
+                <li></i><%= link_to "Salir", signout_path, method: "delete" %></li>
+
               </ul>
             </div>
 
@@ -65,21 +65,23 @@
 </div>
 
 <div class="container-fluid">
-  <div class="row-fluid">
-    <%= render "layouts/user_sumary" %>
+  <div class="row-fluid">    
     <% if signed_in? %>
-        <div class="span10 well">
+      <%= render "layouts/user_sumary" %>
+      <div class="span10 well">
         <%= yield %>
-        </div>
-    <% else %>
-        <div class="span10 well">
+      </div>
+    <% else %>        
+      <%= render "layouts/sign_up_form" %>
+      <div class="span10 well">
         <%= render template: "sessions/welcome" %>
-        </div>
+      </div>
     <% end %>
   </div>
   <footer>
     <p>&copy; BiciNETa 2012</p>
   </footer>
+  <%= debug(params) if Rails.env.development? %>
 </div>
 
 
