--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,7 +27,8 @@
 </table>
 
 
-
-<%= link_to 'Edit', edit_user_path(@user), class: "btn" %>
+<% if current_user.is_admin? %> 
+  <%= link_to 'Edit', edit_user_path(@user), class: "btn" %>
+<% end %>
 <%= link_to 'Back', users_path, class: "btn" %>
 
