--- a/app/views/points/_form.html.erb
+++ b/app/views/points/_form.html.erb
@@ -1,27 +1,110 @@
-<%= form_for(@point) do |f| %>
-  <% if @point.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@point.errors.count, "error") %> prohibited this user from being saved:</h2>
+<script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script> 
 
-      <ul>
-      <% @point.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+<style type="text/css">
+  html { height: 100% }
+  body { height: 100%; }  
+  .container-fluid { height: 100%;}
+  .row-fluid { height: 80%;}
+  #gMap { height: 80%; width: 50%;}
+</style>
+
+<div class="row-fluid">
+  
+  <div id="gMap" class="span10" >
+    <h1><%= @point.place %></h1>  
+    <br>
+    <div id="map_canvas" style="width:100%; height:100%"></div>  
+    <br>
+    <div >
+      <h3>Agregar desde el mapa</h3>
+      <%= form_tag(save_coords_points_path, :method => 'post') do %>
+        <%= hidden_field_tag 'latitude' %>
+        <%= hidden_field_tag 'longitude' %>
+        <%= label :place, "Nombre del lugar" %>
+        <%= text_field_tag :place %>
+        <%= submit_tag "Guardar posición", :class => "btn btn-primary" %>
       <% end %>
-      </ul>
     </div>
-  <% end %>
+  </div>
 
-  <div class="field">
-    <%= f.label :place, "Lugar" %><br />
-    <%= f.text_field :place %>
-    <%= f.hidden_field :user_id, value: current_user.id %>
-  </div>
-  <div class="field">
-    <%= f.label :address, "Dirección (Ej: Vicuña Mackenna 3939, San Joaquín, Santiago)" %><br />
-    <%= f.text_field :address %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-  <p id="notice"><%= notice %></p>
-<% end %>
+  <div class="span3">
+    <% if @point.errors.any? %>
+      <div class="alert alert-error">
+        <span class="label label-important">
+          Hay <%= pluralize(@point.errors.count, "error", "errores") %>:
+        </span>
+        <ul>
+          <% @point.errors.full_messages.each do |msg| %>
+              <li><%= msg %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+<!--
+    <%= form_for(@point) do |f| %> 
+      
+        <%= f.label :place, "Nombre del lugar" %>
+        <%= f.text_field :place %>
+        <%= f.hidden_field :user_id, value: current_user.id %>
+      
+      
+        <%= f.label :address, "Dirección (Ej: Vicuña Mackenna 3939, San Joaquín, Santiago)" %><br />
+        <%= f.text_field :address %>
+      
+        <%= f.submit "Crear punto", class: "btn" %>  
+
+      <p id="notice"><%= notice %></p>
+    <% end %>
+  -->
+
+  </div>  
+</div>
+
+<script type="text/javascript">
+  function updateMarkerStatus(str) {
+        document.getElementById('markerStatus').innerHTML = str;
+    }
+
+    function updateMarkerPosition(latLng) {
+        $('#latitude').val(latLng.lat());
+        $('#longitude').val(latLng.lng());
+    }
+
+    function updateMarkerAddress(str) {
+        document.getElementById('address').innerHTML = str;
+    }
+
+
+  function initialize() {
+    var latLng = new google.maps.LatLng(-33.4428257225355,-70.65389554952253);    
+    var myOptions = {
+      zoom:12,
+      center:latLng,
+      mapTypeId:google.maps.MapTypeId.ROADMAP
+    };
+
+    var map = new google.maps.Map(document.getElementById("map_canvas"),myOptions);    
+    
+    var marker = new google.maps.Marker({
+      position:latLng,
+      title: "Nuevo Lugar",
+      map: map,
+      draggable: true
+    });
+
+    // Update current position info.
+    updateMarkerPosition(latLng);
+
+
+    google.maps.event.addListener(marker, 'drag', function () {
+        updateMarkerPosition(marker.getPosition());
+    });
+
+    google.maps.event.addListener(marker, 'dragend', function () {
+        geocodePosition(marker.getPosition());
+    });
+  }
+  google.maps.event.addDomListener(window, 'load', initialize);
+</script>
+
