--- a/app/views/points/show.html.erb
+++ b/app/views/points/show.html.erb
@@ -1,8 +1,18 @@
+<script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script> 
 
+<style type="text/css">
+  html { height: 100% }
+  body { height: 100%; }  
+  .container-fluid { height: 100%;}
+  .row-fluid { height: 80%;}
+  #gMap { height: 80%; width: 50%;}
+</style>
 
 <div class="row-fluid">
   <div id="gMap" class="span10">
-    <%= render "layouts/testingMap" %>
+    <h1><%= @point.place %></h1>  
+    <br>
+    <div id="map_canvas" style="width:100%; height:100%"></div>  
   </div>
 
   <div class="span3">
@@ -37,12 +47,29 @@
 
   </div>
 
-
 </div>
-
 
 <%= link_to 'Edit', edit_point_path(@point), class: "btn" %>
 <%= link_to 'Back', points_path, class: "btn" %>
 
+<script type="text/javascript">
+  function initialize() {
 
+    var latlng = new google.maps.LatLng(<%= @point.latitude %>, <%= @point.longitude%>);    
+    var myOptions = {
+      zoom:16,
+      center:latlng,
+      mapTypeId:google.maps.MapTypeId.ROADMAP,      
+    };
+
+    var map = new google.maps.Map(document.getElementById("map_canvas"),myOptions);    
+    
+    var marker = new google.maps.Marker({
+      position:latlng,
+      title: "<%= @point.place %>",
+      map: map,
+    });
+  }
+  google.maps.event.addDomListener(window, 'load', initialize);
+</script>
   
