--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,8 +26,7 @@
   <% end %>
 </table>
 
-
-<% if current_user.is_admin? %> 
+<% if current_user &&current_user.is_admin? %> 
   <%= link_to 'Edit', edit_user_path(@user), class: "btn" %>
 <% end %>
 <%= link_to 'Back', users_path, class: "btn" %>
