Adding logged and admin permissions

--- a/app/views/layouts/_sign_up_form.html.erb
+++ b/app/views/layouts/_sign_up_form.html.erb
@@ -1,19 +1,19 @@
 <div class="span2">  
   <div class="well sidebar-nav">
-    <h2>Regístrate!</h2>    
+    <h2 style="border-bottom: 1px solid #B0B0B0;">Regístrate!</h2>    
     <br>    
     <% if @user.errors.any? %>
-          <div class="alert alert-error">
-            <span class="label label-important">
-              Hay <%= pluralize(@user.errors.count, "error", "errores") %>:
-            </span>
-            <ul>
-              <% @user.errors.full_messages.each do |msg| %>
-                  <li><%= msg %></li>
-              <% end %>
-            </ul>
-          </div>
-      <% end %>
+        <div class="alert alert-error">
+          <span class="label label-important">
+            Hay <%= pluralize(@user.errors.count, "error", "errores") %>:
+          </span>
+          <ul>
+            <% @user.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
 
     <%= form_for(@user, action: "sessions#new") do |f| %>
       <%= f.label :name, "Nombre" %>
