--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,8 +11,10 @@
 <table class="table table-striped table-bordered">
   <tr>
     <th>Nombre</th>
-    <th>Email</th>    
+    <th>Email</th> 
+    <% if current_user && current_user.is_admin? %>   
     <th></th>    
+    <% end %>
   </tr>
 
   <% @users.each do |user| %>
@@ -21,15 +23,14 @@
           <%= link_to user.name, user %>
         </td>
         <td><%= user.email %></td>
-        <td>
-          <a href="<%= edit_user_path(user) %>"><i class="icon-edit"></i></a>
-          <a href="<%= user_path(user) %>" data-confirm="Estás seguro de eliminar a <%= user.name %>?" data-method="delete" rel="nofollow"><i class="icon-remove"></i></a>
-        </td>      
+        <% if current_user && current_user.is_admin? %>   
+          <td>
+            <a href="<%= edit_user_path(user) %>"><i class="icon-edit"></i></a>
+            <a href="<%= user_path(user) %>" data-confirm="Estás seguro de eliminar a <%= user.name %>?" data-method="delete" rel="nofollow"><i class="icon-remove"></i></a>
+          </td>      
+        <% end %>
       </tr>
   <% end %>
 </table>
 <p id="notice"><%= notice %></p>
-
- 
-<%= link_to 'Nuevo Usuario', new_user_path, class: "btn" %>
 
