--- a/app/views/points/index.html.erb
+++ b/app/views/points/index.html.erb
@@ -7,7 +7,6 @@
   <% end %>
 </div>
 
-
 <table class="table table-striped table-bordered">
   <tr>
     <th>Nombre</th>
@@ -15,7 +14,9 @@
     <th>Address</th>
     <th>Latitude</th>
     <th>Longitude</th>
-    <th>#</th>
+    <% if current_user && current_user.is_admin? %>   
+    <th></th>    
+    <% end %>
   </tr>
 
   <% @points.each do |p| %>
@@ -33,10 +34,12 @@
         <td><%= p.address %></td>
         <td><%= p.latitude %></td>
         <td><%= p.longitude %></td>
+        <% if current_user && current_user.is_admin? %>
         <td>
           <a href="<%= edit_point_path(p) %>"><i class="icon-edit"></i></a>
           <a href="<%= point_path(p) %>" data-confirm="Estás seguro de eliminar a <%= p.address %>?" data-method="delete" rel="nofollow"><i class="icon-remove"></i></a>
         </td>
+        <% end %>
       </tr>
   <% end %>
 </table>
